--- a/src/main.html
+++ b/src/main.html
@@ -12,7 +12,18 @@
 
   <body>
     <div id="start-page">
+      <p>
+        &emsp;This is "js vs wasm" benchmark app. 
+        The main purpose is to collect statistics about WASM implementation performance comparing to JS implementation for different platforms.
+        This data can help developers to examine current state of WASM and make a decision use or not to use WASM.
+      </p>
       <button type="button" id="start-btn" class="btn btn-primary btn-lg">Start</button>
+      <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
+           role="progressbar" 
+          aria-valuenow="75" 
+          aria-valuemin="0" 
+          aria-valuemax="100">
+      25%</div>
     </div>
 </body>
 </html>
