--- a/src/main.html
+++ b/src/main.html
@@ -12,18 +12,32 @@
 
   <body>
     <div id="start-page">
-      <p>
+      <p class="description">
         &emsp;This is "js vs wasm" benchmark app. 
         The main purpose is to collect statistics about WASM implementation performance comparing to JS implementation for different platforms.
         This data can help developers to examine current state of WASM and make a decision use or not to use WASM.
       </p>
       <button type="button" id="start-btn" class="btn btn-primary btn-lg">Start</button>
-      <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning"
-           role="progressbar" 
-          aria-valuenow="75" 
-          aria-valuemin="0" 
-          aria-valuemax="100">
-      25%</div>
+
+      <div id="js-progress-container" style="margin-bottom: 20px; margin-top: 0;"> 
+        <p style="margin-bottom: 0px">Testing JS</p>
+        <div class="progress" id="js-progress">
+          <div class="progress-bar progress-bar-striped bg-warning"
+               role="progressbar" style="width: 100%">
+          </div>
+        </div>
+      </div>
+
+      <div id="wasm-progress-container" style="margin-bottom: 60px;">
+        <p style="margin-bottom: 0px">Testing WASM</p>
+        <div class="progress" id="wasm-progress">
+          <div class="progress-bar progress-bar-striped"
+               role="progressbar" style="width: 100%">
+          </div>
+        </div>
+      </div>
+
+      <button type="button" id="stats-btn" class="btn btn-primary btn-lg">All results</button>
     </div>
 </body>
 </html>
