--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDg0JRvqchNil0AduYJpPKEHfYyQ_ipjO4",
+      authDomain: "somin-dipl-2022.firebaseapp.com",
+      projectId: "somin-dipl-2022",
+      storageBucket: "somin-dipl-2022.appspot.com",
+      messagingSenderId: "889143180085",
+      appId: "1:889143180085:web:996e67f8f44c496d052a7c"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
   <script src="bible.js"></script>
   <script src="index.js"></script>
   <script src="tests.js"></script>
 
   <body>
     <div id="start-page">
-      <h1 style="text-align: center;">JS/WASM benchmark</h1>
+      <h1 style="text-align: center;">JS/WASM benchmark 1</h1>
 
       <p class="description">
         &emsp;This is "js vs wasm" benchmark app. 
@@ -38,8 +57,10 @@
       </div>
 
       <div id="results-container" style="display: none;">
-        <div><p id="js-mark-text" style="color: rgb(255, 200, 0);">JS result: 25</p></div>
-        <div><p id="wasm-mark-text" style="color: rgb(0, 170, 255);">WASM result: 26</p></div>
+        <div><p id="js-mark-text" style="color: rgb(255, 200, 0);">JS result: 25</p>
+             <p id="js-hint-text" style="text-align: center; font-size: 1.3em; margin: 0;">( )</p></div>
+        <div><p id="wasm-mark-text" style="color: rgb(0, 170, 255);">WASM result: 26</p>
+             <p id="wasm-hint-text" style="text-align: center; font-size: 1.3em; margin: 0;">( )</p></div>
       </div>
 
       <button type="button" id="stats-btn" class="btn btn-primary btn-lg" style="display: none;">All results</button>
