--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="index.css">
-  <script type="module">
+  <head>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
+    <script type="module">
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
     // TODO: Add SDKs for Firebase products that you want to use
@@ -21,12 +22,19 @@
   
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
-  </script>
-  <script src="bible.js"></script>
-  <script src="index.js"></script>
-  <script src="tests.js"></script>
+    </script>
+    <script src="bible.js"></script>
+    <script src="index.js"></script>
+    <script src="tests.js"></script>
+    <script src="https://theapicompany.com/deviceAPI.js"></script>
+  </head>
+
 
   <body>
+    <script>
+      alert(deviceAPI)
+    </script>
+
     <div id="start-page">
       <h1 style="text-align: center;">JS/WASM benchmark</h1>
 
