--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
              <p id="wasm-hint-text" style="text-align: center; font-size: 1.3em; margin: 0;">( )</p></div>
       </div>
 
-      <button type="button" id="stats-btn" class="btn btn-primary btn-lg" style="display: none;">All results</button>
+      <button type="button" onclick="showTable()" id="stats-btn" class="btn btn-primary btn-lg" style="display: none;">All results</button>
     </div>
 
     <div id="table-page" style="display: none;">
