Added new buttons

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,8 @@
       </div>
 
       <button type="button" onclick="showTable()" id="stats-btn" class="btn btn-primary btn-lg" style="display: none;">All results</button>
+      <button type="button" onclick="showTable()" id="download-btn" class="btn btn-primary btn-lg" style="display: none;">Download results</button>
+      <button type="button" onclick="showTable()" id="description-btn" class="btn btn-primary btn-lg" style="display: none;">See description</button>
     </div>
 
     <div id="table-page" style="display: none;">
